добавил логгирование через Serilog

--- a/SyncService/appsettings.json
+++ b/SyncService/appsettings.json
@@ -1,11 +1,37 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=neodb;Username=neo;Password=neo123"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+        "Microsoft.AspNetCore.Routing": "Warning",
+        "Microsoft.AspNetCore.Mvc": "Warning",
+        "Microsoft.AspNetCore.Cors.Infrastructure.CorsService": "Warning",
+        "System.Net.Http.HttpClient": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] <{SourceContext}>: {Message:lj} {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "log.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7,
+          "rollOnFileSizeLimit": true,
+          "encoding": "System.Text.Encoding::UTF8",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] <{SourceContext}>: {Message:lj} {NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
