запуск сваггера при запуске приложения + исключение в гите для логов + пустая строка в конце логов

--- a/SyncService/Properties/launchSettings.json
+++ b/SyncService/Properties/launchSettings.json
@@ -4,6 +4,9 @@
     "SyncService": {
       "commandName": "Project",
       "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
