--- a/SyncService/appsettings.json
+++ b/SyncService/appsettings.json
@@ -24,7 +24,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "log.txt",
+          "path": "logs/log.txt",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
           "rollOnFileSizeLimit": true,
