проверка документирования методов

--- a/SyncService/SyncService.csproj
+++ b/SyncService/SyncService.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-SyncService-104aa931-f5e3-49c6-8d97-fbf0c4c626d9</UserSecretsId>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
